--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.8",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@studio-freight/lenis": "^1.0.42",
+    "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
+    "ogl": "^1.0.11",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "split-type": "^0.3.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
