--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "ogl": "^1.0.11",
     "postcss": "^8.5.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "split-type": "^0.3.4",
     "tailwind-merge": "^3.4.0"
   },
