--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.17.8",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@studio-freight/lenis": "^1.0.42",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
+    "color-bits": "^1.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.26",
     "next": "^16.0.7",
     "ogl": "^1.0.11",
     "postcss": "^8.5.6",
